--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -58,7 +58,7 @@ StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover { backgro
 
 StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { background-color: #fb6f55; }
 
-.slider { height: 1em; -slider-height: 0.3em; -slider-background-color: #302e2d; -slider-border-color: #242322; -slider-active-background-color: #fb6f55; -slider-active-border-color: #fa4523; -slider-border-width: 1px; -slider-handle-radius: 6px; }
+.slider { height: 1em; -barlevel-height: 0.3em; -barlevel-background-color: #302e2d; -barlevel-border-color: #242322; -barlevel-active-background-color: #fb6f55; -barlevel-active-border-color: #f9300a; -barlevel-overdrive-color: #d51010; -barlevel-overdrive-border-color: #a60c0c; -barlevel-overdrive-separator-width: 0.2em; -barlevel-border-width: 1px; -slider-handle-radius: 6px; -slider-height: 0.3em; -slider-background-color: #302e2d; -slider-border-color: #242322; -slider-active-background-color: #fb6f55; -slider-active-border-color: #fa4523; -slider-border-width: 1px; -slider-handle-radius: 6px; }
 
 .check-box StBoxLayout { spacing: .8em; }
 
