--- a/gnome-shell/gnome-shell-high-contrast.css
+++ b/gnome-shell/gnome-shell-high-contrast.css
@@ -58,7 +58,7 @@ StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover { backgro
 
 StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { background-color: #215d9c; }
 
-.slider { height: 1em; -barlevel-height: 0.3em; -barlevel-background-color: #0e0e0e; -barlevel-border-color: black; -barlevel-active-background-color: #215d9c; -barlevel-active-border-color: #14375d; -barlevel-overdrive-color: #d51010; -barlevel-overdrive-border-color: #a60c0c; -barlevel-overdrive-separator-width: 0.2em; -barlevel-border-width: 1px; -slider-handle-radius: 6px; -slider-height: 0.3em; -slider-background-color: #0e0e0e; -slider-border-color: black; -slider-active-background-color: #215d9c; -slider-active-border-color: #184472; -slider-border-width: 1px; -slider-handle-radius: 6px; }
+.slider { height: 1em; -barlevel-height: 0.3em; -barlevel-background-color: #0e0e0e; -barlevel-border-color: black; -barlevel-active-background-color: #215d9c; -barlevel-active-border-color: #14375d; -barlevel-overdrive-color: #d51010; -barlevel-overdrive-border-color: #a60c0c; -barlevel-overdrive-separator-width: 0.2em; -barlevel-border-width: 1px; -slider-handle-radius: 6px; -slider-height: 0.3em; -slider-background-color: #0e0e0e; -slider-border-color: black; -slider-active-background-color: #215d9c; -slider-active-border-color: #184472; -slider-border-width: 1px; }
 
 .check-box StBoxLayout { spacing: .8em; }
 
