--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -597,6 +597,12 @@ window.csd > .titlebar:not(headerbar) { padding: 0; background-color: transparen
 
 .titlebar:not(headerbar) separator { background-color: #444240; box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), inset 0 -1px transparent; }
 
+filechooser .path-bar.linked > button { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
+
+filechooser .path-bar.linked > button:hover { box-shadow: 0 2px #b9b9b5; }
+
+filechooser .path-bar.linked > button:active, filechooser .path-bar.linked > button:checked { box-shadow: 0 2px #fb6f55; }
+
 filechooser #pathbarbox { background-color: #efefee; border-bottom: 1px solid #b9b9b5; }
 
 .path-bar button.text-button, .path-bar button.image-button, .path-bar button { padding-left: 4px; padding-right: 4px; }
@@ -995,7 +1001,7 @@ treeview.view check:selected:disabled, treeview.view radio:selected:disabled { c
 
 treeview.view check:selected:disabled:backdrop, treeview.view radio:selected:disabled:backdrop { color: #b9b9b5; }
 
-treeview.view check:backdrop:selected, treeview.view check:backdrop, treeview.view radio:backdrop:selected, treeview.view radio:backdrop { color: #8d8d8c; }
+treeview.view check:backdrop:selected, treeview.view check:backdrop, treeview.view radio:backdrop:selected, treeview.view radio:backdrop { color: #ffffff; }
 
 scale trough, scale fill, progressbar trough { border: 1px solid #d1d1ce; border-radius: 3px; background-color: #d1d1ce; box-shadow: none; }
 
