--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1573,8 +1573,8 @@ headerbar { // headerbar border rounding
 filechooser .path-bar.linked > button {
   @extend %linked_flippable;
   @include button(undecorated);
-  &:hover { box-shadow: 0 2px $borders_color; }
-  &:active, &:checked { box-shadow: 0 2px $selected_bg_color; }
+  &:hover { box-shadow: inset 0 -2px $borders_color; }
+  &:active, &:checked { box-shadow: inset 0 -2px $selected_bg_color; }
 }
 
 filechooser {
