--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -591,9 +591,9 @@ window.csd > .titlebar:not(headerbar) { padding: 0; background-color: transparen
 
 filechooser .path-bar.linked > button { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(242, 241, 240, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
-filechooser .path-bar.linked > button:hover { box-shadow: 0 2px #1d1c1b; }
+filechooser .path-bar.linked > button:hover { box-shadow: inset 0 -2px #1d1c1b; }
 
-filechooser .path-bar.linked > button:active, filechooser .path-bar.linked > button:checked { box-shadow: 0 2px #fb6f55; }
+filechooser .path-bar.linked > button:active, filechooser .path-bar.linked > button:checked { box-shadow: inset 0 -2px #fb6f55; }
 
 filechooser #pathbarbox { background-color: #2b2a29; border-bottom: 1px solid #1d1c1b; }
 
