--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -599,9 +599,9 @@ window.csd > .titlebar:not(headerbar) { padding: 0; background-color: transparen
 
 filechooser .path-bar.linked > button { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
-filechooser .path-bar.linked > button:hover { box-shadow: 0 2px #b9b9b5; }
+filechooser .path-bar.linked > button:hover { box-shadow: inset 0 -2px #b9b9b5; }
 
-filechooser .path-bar.linked > button:active, filechooser .path-bar.linked > button:checked { box-shadow: 0 2px #fb6f55; }
+filechooser .path-bar.linked > button:active, filechooser .path-bar.linked > button:checked { box-shadow: inset 0 -2px #fb6f55; }
 
 filechooser #pathbarbox { background-color: #efefee; border-bottom: 1px solid #b9b9b5; }
 
