--- a/gtk-3.0/_colors.scss
+++ b/gtk-3.0/_colors.scss
@@ -50,7 +50,7 @@ $shadow_color: transparentize(black, 0.9);
 $drop_target_color: #4e9a06;
 
 //headerbar color
-$header_bg: if($darker == 'true', $dark_bg_color, darken($bg_color, 6%));
+$header_bg: if($dark_header == 'true', $dark_bg_color, darken($bg_color, 6%));
 
 //insensitive state derived colors
 $insensitive_fg_color: mix($fg_color, $bg_color, 50%);
@@ -78,7 +78,7 @@ $secondary_bg_color: mix($bg_color, $base_color, 50%);
 $secondary_borders_color: darken($secondary_bg_color, 8%);
 
 //title buttons
-$close_button: if($darker=='true' or $variant=='dark', transparentize($selected_bg_color, 0.4), #b55f5f);
-$close_button_hover: if($darker=='true' or $variant=='dark', $selected_bg_color, lighten($close_button, 5%));
+$close_button: if($dark_header=='true' or $variant=='dark', transparentize($selected_bg_color, 0.4), #b55f5f);
+$close_button_hover: if($dark_header=='true' or $variant=='dark', $selected_bg_color, lighten($close_button, 5%));
 $close_button_backdrop: lighten($dark_bg_color, 12%);
-$max_min_hover: if($darker=='true' or $variant=='dark', lighten($dark_bg_color, 12%), $borders_color);
+$max_min_hover: if($dark_header=='true' or $variant=='dark', lighten($dark_bg_color, 12%), $borders_color);
