--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -69,7 +69,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     box-shadow: none;
   }
   @if $t==normal-header {
-    @if($darker=='true' or $variant=='dark') {
+    @if($dark_header=='true' or $variant=='dark') {
       color: $dfc;
       background-color: lighten($dc, 15%); //$dark_base_color;
       @include edges(normal-dark);
@@ -77,7 +77,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     @else { @include entry(normal); }
   }
   @if $t==insensitive-header {
-    @if($darker=='true' or $variant=='dark') {
+    @if($dark_header=='true' or $variant=='dark') {
       color: $dfc;
       background-color: lighten($dark_base_color, 10%);
       @include edges(disabled);
@@ -126,8 +126,8 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else { @return transparentize(black, $_lbg*0.8); }
 }
 
-@function _border_color($c, $darker: false) {
-  @if $darker == true { @return darken($c, 30%); }
+@function _border_color($c, $dark_header: false) {
+  @if $dark_header == true { @return darken($c, 30%); }
   @else { @return darken($c, 20%); }
 }
 
@@ -255,7 +255,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   // Header buttons
   @else if $t==headerbutton-normal {
   // normal header button
-    @if($darker=='true' or $variant=='dark') {
+    @if($dark_header=='true' or $variant=='dark') {
       color: $dfc;
       outline-color: transparentize($tc, 0.7);
       background-color: transparent;
@@ -270,7 +270,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $t==headerbutton-hover {
   // hovered header button
-    @if($darker=='true' or $variant=='dark') {
+    @if($dark_header=='true' or $variant=='dark') {
       color: $dfc;
       background-color: lighten($dc, 18%);
       @include edges(hover);
@@ -282,7 +282,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $t==headerbutton-active {
   // active header button
-    @if($darker=='true' or $variant=='dark') {
+    @if($dark_header=='true' or $variant=='dark') {
       color: $dfc;
       background-color: darken($dc, 8%);
       @include edges(active-dark);
@@ -294,7 +294,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $t==headerbutton-hoveractive {
   // active hovered header button
-    @if($darker=='true' or $variant=='dark') {
+    @if($dark_header=='true' or $variant=='dark') {
       color: $dfc;
       background-color: darken($dc, 12%);
       @include edges(active-dark);
@@ -306,7 +306,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $t==headerbutton-focus {
   // focus header button
-    @if($darker=='true' or $variant=='dark') {
+    @if($dark_header=='true' or $variant=='dark') {
       color: $dfc;
       background-color: $selected_bg_color;
       @include edges(focus-dark);
@@ -315,7 +315,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $t==headerbutton-disabled {
   // disabled header button
-    @if($darker=='true' or $variant=='dark') {
+    @if($dark_header=='true' or $variant=='dark') {
       background-color: transparent;
       color: if($tc!=$fg_color, mix($tc, $_bg, 50%), $insensitive_fg_color);
       @include edges(disabled);
@@ -454,7 +454,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   background-color: $c;
   box-shadow:
     inset 0 1px $hc,
-    inset 0 -1px if($darker=='true', transparent, $s2);
+    inset 0 -1px if($dark_header=='true', transparent, $s2);
 }
 
 @mixin ssd_fill($c:$header_bg, $hc:transparentize(white, 0.96)) {
