--- a/src/gtk-3.0/gtk.css
+++ b/src/gtk-3.0/gtk.css
@@ -1279,9 +1279,11 @@ messagedialog .titlebar { min-height: 20px; background-image: none; background-c
 
 messagedialog.csd.background { border-bottom-left-radius: 2px; border-bottom-right-radius: 2px; }
 
-messagedialog.csd .dialog-action-area button { padding: 10px 14px; border-radius: 0; border-left-style: solid; border-right-style: none; border-bottom-style: none; }
+messagedialog.csd .dialog-action-area button { padding: 10px 14px; border-radius: 0; border-style: none; border-top-style: solid; box-shadow: none; border-color: #b9b9b5; }
 
-messagedialog.csd .dialog-action-area button:first-child { border-left-style: none; border-bottom-left-radius: 2px; -gtk-outline-bottom-left-radius: 2px; }
+messagedialog.csd .dialog-action-area button:focus { box-shadow: inset 0 0 0 1px #fb6f55; }
+
+messagedialog.csd .dialog-action-area button:first-child { border-bottom-left-radius: 2px; -gtk-outline-bottom-left-radius: 2px; }
 
 messagedialog.csd .dialog-action-area button:last-child { border-bottom-right-radius: 2px; -gtk-outline-bottom-right-radius: 2px; }
 
