--- a/src/gtk-3.0/_common.scss
+++ b/src/gtk-3.0/_common.scss
@@ -2518,7 +2518,7 @@ treeview.view radio:selected { &:focus, & { @extend %radio; }} // This is a work
   }
 
   // ...on selected list rows
-  row:selected & { &:disabled, & { border-color: $selected_borders_color; } }
+  row:selected &, menuitem:hover & { &:disabled, & { border-color: $selected_borders_color; } }
 
   // OSD
   .osd & {
