--- a/src/gtk-3.0/_common.scss
+++ b/src/gtk-3.0/_common.scss
@@ -237,11 +237,6 @@ entry {
       &.right { padding-left: 6px; padding-right: 0; }
     }
 
-    undershoot {
-      &.left { @include undershoot(left); }
-      &.right { @include undershoot(right); }
-    }
-
     &.flat {
       &:focus, &:backdrop, &:disabled, &:backdrop:disabled, & {
         min-height: 0;
@@ -1319,6 +1314,11 @@ headerbar {
       background-color: $selected_bg_color;
       background-image: none;
       box-shadow: inset 0 1px mix($top_hilight, $selected_bg_color, 60%);
+
+      label {
+        text-shadow: none;
+        color: $selected_fg_color; 
+      }
     }
 
     .subtitle:link { @extend *:link:selected;  }
@@ -1421,6 +1421,20 @@ headerbar {
   separator {
     background-color: transparent;
     &:backdrop { @include headerbar_fill; }
+  }
+
+  separator.titlebutton { opacity: 0; } // hide the close button separator
+
+  .solid-csd & {
+    &:backdrop, & {
+      &:dir(rtl), &:dir(ltr) { // specificity bump
+        margin-left: -1px;
+        margin-right: -1px;
+        margin-top: -1px;
+        border-radius: 0;
+        box-shadow: none;
+      }
+    }
   }
 }
 
@@ -1805,6 +1819,16 @@ menubar,
     border-color: transparent;
     color: if($dark_header=='true' or $variant=='dark', $dark_fg_color, $fg_color);
 
+    // remove padding and rounding from menubar submenus
+    menu {
+      border-radius: 0;
+      padding:0;
+      menu {
+        border-radius: 0;
+        padding:0;
+      }
+    }
+
     &:hover, &:active { //Seems like it :hover even with keyboard focus
       box-shadow: if($dark_header=='true' or $variant=='dark', inset 0 -2px $selected_bg_color, none);
       color: $selected_fg_color;
@@ -1819,6 +1843,9 @@ menubar,
       box-shadow: none;
     }
   }
+
+  // remove padding and rounding from menubar submenu decoration
+  .csd.popup decoration {border-radius:0;}
 }
 
 menu,
@@ -1880,12 +1907,13 @@ menu,
     border-radius: 0;
 
     &.top {
-      margin-top: -6px;
+      margin-top: -2px;
       border-bottom: 1px solid mix($fg_color, $base_color, 10%);
       -gtk-icon-source: -gtk-icontheme('pan-up-symbolic');
     }
 
     &.bottom {
+      margin-top: 4px;
       margin-bottom: -6px;
       border-top: 1px solid mix($fg_color, $base_color, 10%);
       -gtk-icon-source: -gtk-icontheme('pan-down-symbolic');
@@ -2342,6 +2370,8 @@ switch {
     &:focus slider { box-shadow: 0 0 0 6px transparentize(lighten($selected_bg_color, 20%), 0.6); }
     &:focus:hover slider { box-shadow: 0 0 0 6px transparentize(lighten($selected_bg_color, 20%), 0.5); }
   }
+
+  image { color: transparent; }
 }
 
 //-----------------------//
@@ -2994,17 +3024,6 @@ scrolledwindow {
     &.right {
       @include overshoot(right);
     }
-  }
-
-  // Overflow indication, works similarly to the overshoot, the size if fixed tho.
-  undershoot {
-    &.top { @include undershoot(top); }
-
-    &.bottom { @include undershoot(bottom); }
-
-    &.left { @include undershoot(left); }
-
-    &.right { @include undershoot(right); }
   }
 
   junction { // the small square between two scrollbars
