A couple of fixes

--- a/src/gnome-shell/gnome-shell.css
+++ b/src/gnome-shell/gnome-shell.css
@@ -126,7 +126,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .end-session-dialog-warning:rtl { text-align: right; }
 
-.end-session-dialog-logout-icon { border-radius: 0; width: 48px; height: 48px; background-size: contain; }
+.end-session-dialog-logout-icon { border-radius: 99px; width: 48px; height: 48px; background-size: contain; }
 
 .end-session-dialog-shutdown-icon { color: #f2f1f0; width: 48px; height: 48px; }
 
@@ -200,7 +200,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .polkit-dialog-user-root-label { color: #f57900; }
 
-.polkit-dialog-user-icon { border-radius: 0; background-size: contain; width: 48px; height: 48px; }
+.polkit-dialog-user-icon { border-radius: 99px; background-size: contain; width: 48px; height: 48px; }
 
 .audio-device-selection-dialog { spacing: 30px; }
 
@@ -234,7 +234,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .popup-menu { min-width: 15em; }
 
-.popup-menu .popup-sub-menu { background-color: #3f3d3b; box-shadow: inset 0 -1px 0px #32302f; }
+.popup-menu .popup-sub-menu { padding-bottom: 1px; background-color: #3f3d3b; box-shadow: inset 0 -1px 0px #32302f; }
 
 .popup-menu .popup-menu-content { padding: 1em 0em; }
 
@@ -598,6 +598,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .search-section-separator { height: 2px; background-color: rgba(255, 255, 255, 0.2); }
 
+.search-section:last-child .search-section-separator { background-color: transparent; }
+
 .list-search-result-content { spacing: 30px; }
 
 .list-search-result-title { color: #e6e4e2; spacing: 12px; }
@@ -816,9 +818,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .candidate-page-button-icon { icon-size: 1em; }
 
-.framed-user-icon { background-size: contain; border: 2px solid #f2f1f0; color: #f2f1f0; border-radius: 0; }
+.user-icon { background-size: contain; color: #f2f1f0; border-radius: 99px; }
 
-.framed-user-icon:hover { border-color: white; color: white; }
+.user-icon:hover { color: white; }
 
 .login-dialog-banner-view { padding-top: 24px; max-width: 23em; }
 
