--- a/src/gtk-3.0/gtk-dark.css
+++ b/src/gtk-3.0/gtk-dark.css
@@ -559,11 +559,13 @@ headerbar entry:focus { border-color: #fb6f55; box-shadow: 0 1px 2px rgba(0, 0, 
 
 headerbar entry:disabled { color: #f2f1f0; background-color: #2b2b2b; box-shadow: none; border-color: transparent; }
 
-headerbar .suggested-action:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(242, 241, 240, 0); text-shadow: none; -gtk-icon-shadow: none; color: #9b9a98; }
+headerbar button.suggested-action { color: #ffffff; }
 
-headerbar .suggested-action:disabled > .label { color: inherit; }
+headerbar button.suggested-action:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(242, 241, 240, 0); text-shadow: none; -gtk-icon-shadow: none; color: #9b9a98; }
 
-headerbar .suggested-action:backdrop:not(:disabled) { color: #ffffff; }
+headerbar button.suggested-action:disabled > .label { color: inherit; }
+
+headerbar button.suggested-action:backdrop:not(:disabled) { color: #ffffff; }
 
 headerbar .linked:not(entry) button:not(:last-child):not(:only-child) { border-right-style: solid; }
 
